fix: incorrect path to controller in Kollektiv.fxml
after correction mvn javafx:run works from /ui directory